# screenpipe

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  TESTING.md  bypass_paywall.patch  lefthook.yml
.claude/skills/screenpipe-api/: SKILL.md
.github/: pull_request_template.md
.github/ci/ort-smoke/: Cargo.toml
.github/workflows/: build-macos.yml  ci.yml  debug.yml  deploy-ai-gateway.yml  e2e-test.yml  linux-appimage-smoke.yml  ort-init-smoke.yml  pr-media-check.yml  release-app.yml  release-cli.yml  release-enterprise.yml  release-mcp.yml  repo-sync.yml  sdk-release.yml  sdk.yml  style.yml  test-signing.yml  windows-integration-test.yml
apps/screenpipe-app-tauri/: eslint.effects.config.mjs  package.json
apps/screenpipe-app-tauri/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  providers.tsx
apps/screenpipe-app-tauri/components/: advisory-overlay.tsx  app-entitlement-gate.test.tsx  app-entitlement-gate.tsx  app-sidebar.tsx  browser-sidebar.tsx  changelog-dialog.tsx  chat-sidebar.tsx  deeplink-handler.tsx  enterprise-license-prompt.tsx  file-preview-sidebar.tsx  file-viewer-html-frame.tsx  file-viewer.tsx  notification-bell.tsx  notification-handler.tsx  pipe-advisory-watcher.tsx  pipe-store.tsx  post-install-connections-modal.tsx  standalone-chat.tsx  theme-provider.tsx  thinking-level-selector.tsx  update-banner.tsx
apps/screenpipe-app-tauri/e2e/: COVERAGE.md  coverage-map.json  wdio.conf.ts
apps/screenpipe-app-tauri/lib/: advisories.ts  announcements.ts  app-entitlement.test.ts  app-entitlement.ts  auth-guard.test.tsx  auth-guard.tsx  chat-dedup.ts  chat-storage.ts  chat-utils.ts  language.ts  mcp-registry.ts  owned-browser-ownership.ts  pipe-connections.ts  pipe-errors.ts  pipe-ndjson-to-chat.ts  query-client.ts  saf.ts  skills-registry.ts  source-citations.ts  summary-templates.ts  team-pipes.ts
apps/screenpipe-app-tauri/scripts/: build_macos.sh  pre_build.js
apps/screenpipe-app-tauri/src-tauri/: Cargo.toml  build.rs  skills-registry.json  tauri.beta.conf.json  tauri.conf.json  tauri.enterprise.conf.json  tauri.macos.conf.json  tauri.prod.conf.json
crates/screenpipe-a11y/: Cargo.toml
crates/screenpipe-a11y/src/: config.rs
crates/screenpipe-a11y/src/platform/: linux.rs  macos.rs  windows_uia.rs
crates/screenpipe-a11y/src/tree/: macos.rs  mod.rs
crates/screenpipe-audio/: Cargo.toml  build.rs
crates/screenpipe-audio-eval/: Cargo.toml
crates/screenpipe-audio/examples/: bench_quality.rs  bench_quality2.rs  wer_battle_test.rs
crates/screenpipe-audio/scripts/: gen_wer_corpus.sh
crates/screenpipe-audio/src/: lib.rs  meeting_detector.rs  meeting_processes.rs  metrics.rs
crates/screenpipe-audio/tests/: metrics_dedup_skip_test.rs  onnx_model_test.rs
crates/screenpipe-capture/: Cargo.toml
crates/screenpipe-capture/src/: paired_capture.rs
crates/screenpipe-config/: Cargo.toml
crates/screenpipe-config/src/: recording.rs
crates/screenpipe-connect/: Cargo.toml
crates/screenpipe-connect/src/: ics_calendar.rs  lib.rs  mcp_servers.rs  oauth.rs  oauth_refresh_scheduler.rs  remote_sync.rs  unstructured_ocr.rs
crates/screenpipe-core/: Cargo.toml
crates/screenpipe-core/src/: ffmpeg.rs  lib.rs  time.rs
crates/screenpipe-db/: Cargo.toml
crates/screenpipe-db/benches/: search_accuracy.rs
crates/screenpipe-db/src/: db.rs  failpoint_vfs.rs  lib.rs  text_similarity.rs  types.rs  write_queue.rs
crates/screenpipe-db/tests/: close_severs_connections_test.rs  db.rs  fts_contention_test.rs  meeting_transcript_dedup_test.rs  memory_pressure_test.rs  outputs_saf_test.rs  query_plan_test.rs  speaker_delete_test.rs  suggestions_frames_table_test.rs  tag_filter_bench.rs  timeline_frameless_audio_test.rs  timeline_live_meeting_test.rs
crates/screenpipe-engine/: Cargo.toml  build.rs
crates/screenpipe-engine/examples/: meeting_scan_stress.rs
crates/screenpipe-engine/src/: archive.rs  auth_key.rs  cli_reminder.rs  connections_api.rs  drm_detector.rs  event_driven_capture.rs  external_memory_sync.rs  fd_limit.rs  hd_recorder.rs  hot_frame_cache.rs  lib.rs  mcp_servers_api.rs  meeting_detector.rs  meeting_telemetry.rs  permission_monitor.rs  pipes_api.rs  recording_config.rs  resource_monitor.rs  retention.rs  schedule_monitor.rs  server.rs  snapshot_compaction.rs  sync_api.rs  sync_provider.rs  ui_recorder.rs  video_utils.rs  workflow_classifier.rs
crates/screenpipe-engine/tests/: frame_extraction_test.rs  meeting_detection_eval.rs  retention_lean_test.rs  stream_frames_test.rs  video_utils_test.rs
crates/screenpipe-events/: Cargo.toml
crates/screenpipe-events/src/: lib.rs
crates/screenpipe-meeting-eval/: Cargo.toml
crates/screenpipe-meeting-eval/src/: lib.rs
crates/screenpipe-redact/: Cargo.toml
crates/screenpipe-redact/examples/: pii_eval.rs  rfdetr_ep_probe.rs
crates/screenpipe-redact/src/: lib.rs  ocr_json.rs  pipeline.rs  pseudonym.rs  redaction_map.rs  span.rs
crates/screenpipe-redact/tests/: worker_integration.rs
crates/screenpipe-rfdetr-mlx/: Cargo.toml
crates/screenpipe-screen/: Cargo.toml
crates/screenpipe-screen/src/: capture_screenshot_by_window.rs  lib.rs  metrics.rs  monitor.rs  tesseract.rs
crates/screenpipe-secrets/: Cargo.toml
crates/screenpipe-secrets/src/: crypto.rs  store.rs
crates/screenpipe-sync/: Cargo.toml
crates/screenpipe-team-memory/: Cargo.toml
crates/screenpipe-vault/: Cargo.toml
crates/screenpipe-vault/src/: crypto.rs  manager.rs  migration.rs
docs/: ORG_DATA_UNIFICATION_SPEC.md
docs/mintlify/docs-mintlify-mig-tmp/: ai-memory.mdx  api-recipes.mdx  architecture.mdx  changelog.mdx  chatgpt.mdx  claude-code.mdx  cli-reference.mdx  cline.mdx  cloud-archive.mdx  connection-reference.mdx  connections.mdx  (+32 more)
ee/desktop-rust/: enterprise_policy.rs  enterprise_sync.rs  enterprise_upload.rs
ee/sdk/: Cargo.toml  README.md  package.json
ee/sdk/recorder-core/: Cargo.toml
ee/sdk/tauri/rust/: Cargo.toml
ee/sdk/tauri/rust/src/: lib.rs
scripts/dev-vm/: provision.sh  run.sh  setup.sh  ssh.sh
scripts/memory-leak/: README.md  leak_hunt.py  leak_probe.py
(+502 files in other folders)
