[package]
name = "screenpipe-config"
version.workspace = true
authors.workspace = true
description = "Shared recording configuration for screenpipe (app, CLI, and engine)"
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
sysinfo = { workspace = true }
specta = { workspace = true, optional = true }

[features]
default = []
specta = ["dep:specta"]

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
