[package]
name = "screenpipe-rfdetr-mlx"
description = "RF-DETR-Nano image-PII detector in MLX via mlx-rs (Apple-Silicon-only)"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
publish = false

[lib]
name = "screenpipe_rfdetr_mlx"
path = "src/lib.rs"

[dependencies]
mlx-rs = { workspace = true, features = ["safetensors"] }
mlx-sys = "0.2"
# Pin to the version mlx-rs uses internally so the TensorView types match.
safetensors = "0.6"
image = { workspace = true, features = ["png", "jpeg"] }
thiserror = { workspace = true }
