[package]
name = "screenpipe-screen"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
screenpipe-a11y = { path = "../screenpipe-a11y" }
serde_json = { workspace = true }
chrono = { workspace = true }

# async
tokio = { workspace = true }

# Image processing
image = { workspace = true }

# OCR
rusty-tesseract = { git = "https://github.com/screenpipe/rusty-tesseract.git", rev = "08346c1de08d122c7121425abc79081c30dbf778" }

anyhow = { workspace = true }

image-compare = "0.4.1"

# Integrations
screenpipe-connect = { path = "../screenpipe-connect" }

# Lanuage specification
screenpipe-core = { path = "../screenpipe-core" }
screenpipe-db = { path = "../screenpipe-db" }

tracing = { workspace = true }
serde = { workspace = true }

once_cell = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
strsim = { workspace = true }
memory-stats = "1.2.0"

serde = { workspace = true }

[package.metadata.osx]
framework = ["Vision", "AppKit"]

[[bench]]
name = "ocr_benchmark"
harness = false

[[bench]]
name = "apple_leak_bench"
harness = false

[[bench]]
name = "frame_comparison_bench"
harness = false

[[bench]]
name = "multi_monitor_bench"
harness = false

# Platform-specific dependencies

# macOS: sck-rs for 12.3+ (ScreenCaptureKit), xcap as fallback for older versions
[target.'cfg(target_os = "macos")'.dependencies]
sck-rs = { git = "https://github.com/screenpipe/sck-rs" , rev = "81855c0db45bde9390fc7765629ecc115b48711d"}
xcap = { workspace = true }
libc = { workspace = true }
cidre = { git = "https://github.com/yury/cidre.git", rev = "8481f3f0dc7dd39bb5be80d9424bfac0cad3801a", features = ["vn", "cv", "cg", "app"] }
accessibility-sys = { workspace = true }
core-foundation = { workspace = true }
core-graphics = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
xcap = { workspace = true, features = ["wgc"] }
uiautomation = { workspace = true }
windows = { workspace = true, features = [
  "Graphics_Imaging",
  "Globalization",
  "Media_Ocr",
  "Storage",
  "Storage_Streams",
  "Foundation_Collections",
] }

[target.'cfg(target_os = "linux")'.dependencies]
xcap = { workspace = true }
libc = { workspace = true }
atspi = { version = "0.25.0", features = ["tokio","proxies-tokio","zbus"] }
zbus = { workspace = true, default-features = false }
atspi-common     = { version = "0.9.0", default-features = false }
atspi-proxies    = { version = "0.9.0", default-features = false }
