[package]
name = "screenpipe-tauri"
version = "0.3.0"
edition = "2021"
description = "Tauri v2 plugin wrapper for @screenpipe/sdk"
license = "LicenseRef-Screenpipe-Enterprise"
publish = false

# Independent of the SDK workspace at `ee/sdk/Cargo.toml`. The Tauri
# plugin is a thin wrapper around the JS bridge (no native build, just
# stdio JSON-RPC), so it shouldn't share lockfiles with the napi addon
# that pulls in the full screenpipe monorepo tree.
[workspace]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "process", "sync", "time"] }
